# fractal-mandelbrot

./: CMakeLists.txt
src/: CMakeLists.txt  graphics.cpp  graphics.hpp  main.cpp  square_rubber_band.cpp  square_rubber_band.hpp  window.cpp  window.hpp
